--- a/client/static/index.html
+++ b/client/static/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <link href="https://unpkg.com/video.js/dist/video-js.min.css" rel="stylesheet">
+  <script src="https://unpkg.com/video.js/dist/video.min.js"></script>
+  <script src="https://unpkg.com/@videojs/http-streaming/dist/videojs-http-streaming.min.js"></script>
   <script type="application/javascript" src="script.js"></script>
 </head>
 <body>
@@ -10,13 +13,14 @@
       <span id="cameraName"></span>
       <button id = "changeButton">Change camera</button>
     </h1>
+    <div class="playerContainer"><video-js id="player" controls></video-js></div>
     <div class="tableHeader">
       <table cellpadding="0" cellspacing="0">
         <thead>
           <tr>
             <th>Start</th>
             <th>End</th>
-            <th>Playlist <a id="liveLink"></a></th>
+            <th>Play <button id="liveButton">Live</button></th>
           </tr>
         </thead>
       </table>
